--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -29,6 +29,15 @@ a:focus {outline: 0 none; text-decoration: none;}
 .panel.panel-default .panel-caption-text {margin: 0 0 10px 0; color: #98a6ad; font-size: 13px;}
 
 .card {margin-bottom: 15px;}
+.card .table-box {display: table; width: 100%; height: 100%;}
+.card .table-cell {display: table-cell; vertical-align: middle;}
 .card .person-name {overflow: hidden;}
 .card .person-name .person-shortname {width: 50px; height: 50px; margin-right: 15px; border-radius: 50%; background-color: #5fbeaa; color: #fff; text-align: center; line-height: 50px; font-size: 20px; float: left;}
-.card .person-name .person-fullname {padding-top: 15px; font-weight: 700;}
+.card .person-name .person-fullname {padding-top: 15px; color: #000;}
+.card .price {font-weight: 700; text-align: right;}
+
+/* Update */
+.panel-table .btn-url .zmdi {font-size: 18px; color: #777;}
+.panel-table .shortname {margin-top: 0; width: 30px; height: 30px; line-height: 30px; font-size: 15px; border-radius: 50%; background-color: #5fbeaa; color: #fff; text-align: center;}
+
+
