--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,5 +1,5 @@
-@import "https://fonts.googleapis.com/css?family=Noto+Sans:400,700";
-@import "https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300";
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,700&subset=latin,latin-ext);
 
 body {background: #ebeff2 none repeat scroll 0 0; color: #797979; font-family: "Noto Sans", Helvetica, Arial, sans-serif; margin: 0; overflow-x: hidden; padding-bottom: 65px;}
 h1, h2, h3, h4, h5, h6 {color: #505458; font-family: "Source Sans Pro", Helvetica, Arial, sans-serif; margin: 10px 0;}
@@ -25,19 +25,9 @@ a:focus {outline: 0 none; text-decoration: none;}
 #main .page-header-text {margin: 0 0 20px 0;}
 #main .breadcrumb {background: transparent; padding: 0; margin: 0 0 20px 0;}
 
-.panel.panel-default .panel-caption {margin: 0 0 10px 0; color: #797979; font-size: 16px; font-weight: 600;}
-.panel.panel-default .panel-caption-text {margin: 0 0 10px 0; color: #98a6ad; font-size: 13px;}
-
-.card {margin-bottom: 15px;}
-.card .table-box {display: table; width: 100%; height: 100%;}
-.card .table-cell {display: table-cell; vertical-align: middle;}
-.card .person-name {overflow: hidden;}
-.card .person-name .person-shortname {width: 50px; height: 50px; margin-right: 15px; border-radius: 50%; background-color: #5fbeaa; color: #fff; text-align: center; line-height: 50px; font-size: 20px; float: left;}
-.card .person-name .person-fullname {padding-top: 15px; color: #000;}
-.card .price {font-weight: 700; text-align: right;}
-
-/* Update */
-.panel-table .btn-url .zmdi {font-size: 18px; color: #777;}
-.panel-table .shortname {margin-top: 0; width: 30px; height: 30px; line-height: 30px; font-size: 15px; border-radius: 50%; background-color: #5fbeaa; color: #fff; text-align: center;}
-
-
+.panel .panel-caption {margin: 0 0 10px 0; color: #797979; font-size: 16px; font-weight: 600;}
+.panel .panel-caption-text {margin: 0 0 10px 0; color: #98a6ad; font-size: 13px;}
+.panel .table-check {width: 20px;}
+.panel .table-action {text-align: right; width: 100px;}
+.panel .table-action a {color: #98a6ad; display: inline-block; margin-left: 5px; font-size: 16px;}
+.panel .table-action a:hover {color: #5fbeaa;}
