--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -21,8 +21,8 @@ a:focus {outline: 0 none; text-decoration: none;}
 #header .navigation ul > li > a:first-child {padding-left: 0;}
 
 #main {margin: 30px 0;}
-#main .page-header {margin: 0 0 10px 0; padding: 0; border: 0; color: #505458; font-size: 24px; font-weight: 600;}
-#main .page-header-text {margin: 0 0 20px 0;}
+#main .page-title {margin: 0 0 10px 0; padding: 0; border: 0; color: #505458; font-size: 24px; font-weight: 600;}
+#main .page-title-text {margin: 0 0 20px 0;}
 #main .breadcrumb {background: transparent; padding: 0; margin: 0 0 20px 0;}
 
 .panel .panel-caption {margin: 0 0 10px 0; color: #797979; font-size: 16px; font-weight: 600;}
