--- a/views/index.twig
+++ b/views/index.twig
@@ -1,9 +1,9 @@
-{% extends "base.html.twig" %}
+{% extends "base.twig" %}
 
 {% block content %}
 <div class="row">
     <div class="col-sm-9">
-        {% include "layouts/panel.table.html.twig" %}
+        {% include "layouts/panel.table.twig" %}
     </div>
 
 
