--- a/views/base.twig
+++ b/views/base.twig
@@ -48,7 +48,7 @@
 
 <main id="main">
     <div class="container">
-        <h1 class="page-title">{% block pageTitle %}{{ pageTitle }}{% endblock %}</h1>
+        <h1 class="page-title">{% block title %}{{ title }}{% endblock %}</h1>
 
         <ol class="breadcrumb">
             <li class="active">Anasayfa</li>
