--- a/views/index.twig
+++ b/views/index.twig
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
     <div class="col-sm-9">
-        {% include "layouts/panel.table.twig" %}
+        {% include "layouts/panel.table.twig" with {'panelCaption': 'aa'} %}
     </div>
 
 
