--- a/views/layouts/panel.table.twig
+++ b/views/layouts/panel.table.twig
@@ -9,7 +9,7 @@
         <table class="table table-hover">
             <thead>
             <tr>
-                {% if table.checkbox is sameas(true) %}
+                {% if panelTable.checkbox is sameas(true) %}
                     <th class="table-check">
                         <div class="checkbox checkbox-primary">
                             <input title="Check All" type="checkbox">
@@ -17,7 +17,7 @@
                         </div>
                     </th>
                 {% endif %}
-                {% for cell in table.cells %}
+                {% for cell in panelTable.cells %}
                     <th class="{{ cell.class }}">{{ cell.caption }}</th>
                 {% endfor %}
                 <th class="text-right">İşlemler</th>
@@ -27,7 +27,7 @@
             {% if (records) %}
                 {% for record in records %}
                     <tr>
-                        {% if table.checkbox is sameas(true) %}
+                        {% if panelTable.checkbox is sameas(true) %}
                             <td>
                                 <div class="checkbox checkbox-primary">
                                     <input title="Check" type="checkbox">
@@ -36,7 +36,7 @@
                             </td>
                         {% endif %}
 
-                        {% for cell in table.cells %}
+                        {% for cell in panelTable.cells %}
                             <td class="{{ cell.class }}">
                                 {% if cell.callable %}
                                     {{ attribute(record, cell.column)|callable(cell.callable)|raw }}
@@ -46,31 +46,16 @@
                             </td>
                         {% endfor %}
                         <td class="table-action">
-                            <a href="#"><i class="fa fa-pencil"></i></a>
-                            <a href="#"><i class="fa fa-times"></i></a>
+                            {% if panelTable.update is sameas(true) %}
+                                <a href="#"><i class="fa fa-pencil"></i></a>
+                            {% endif %}
+                            {% if panelTable.delete is sameas(true) %}
+                                <a href="#"><i class="fa fa-times"></i></a>
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
             {% endif %}
-
-            <tr>
-                <td>
-                    <div class="checkbox checkbox-primary">
-                        <input title="" type="checkbox">
-                        <label></label>
-                    </div>
-                </td>
-                <td>Hasan Ballı</td>
-                <td class="text-right">150,00 TL</td>
-                <td>
-                    <span class="label label-purple">Borç</span>
-                </td>
-                <td>12/10/2016</td>
-                <td class="table-action">
-                    <a href="#"><i class="fa fa-pencil"></i></a>
-                    <a href="#"><i class="fa fa-times"></i></a>
-                </td>
-            </tr>
 
             </tbody>
         </table>
